  navigation-portlet. Fixes http://dev.plone.org/plone/ticket/10232
  [WouterVH]

- Backported a fix for the calendar portlet cache invalidation when
  adding a new event in the last day of the month. This references
  http://dev.plone.org/plone/ticket/10598.
  [deo]

- Made sure to not include the class attribute twice in the RSS
  portlet template.
  [deo]

- Fix RSS portlet breakage. The feedparser does not have a 'bozo' attribute
  if libxml2 is not present on the system.
  [stefan]


1.2.1 - January 15, 2010
------------------------

- RSS portlet: accept the feedparser.CharacterEncodingOverride
  exception when parsing the feed as it is just a warning: the parsed
  entries will be there.
  [maurits]

- Support local navigation root (INavigationRoot) for the previous 
  events link in events portlet.
  Fixes http://dev.plone.org/plone/ticket/9246 
  http://dev.plone.org/plone/ticket/9668
  [pelle]

- Added missing space to tooltip in the calendar portlet.
  Fixes http://dev.plone.org/plone/ticket/9047
  [lzdych]

- Navigation(s) some time disappeared when dealing with multiple navigations 
  pointing to roots with common starting ids like: "abc", "abcde", "abcdefg".
  Thanks to keul for patch.
  Fixes http://dev.plone.org/plone/ticket/9405
  [pelle]

- Fixed base.Assignment - typo
  Fixes http://dev.plone.org/plone/ticket/9350
  [naro]

- Support for portal-relative paths in portlets.xml keys.
  Fixes http://dev.plone.org/plone/ticket/9437
  [naro]

- Some XHTML fixes to be also XHTML Strict compliant.
  See http://dev.plone.org/plone/ticket/4379
  [keul]


1.2 - July 13, 2009
-------------------

- Fix ComponentLookupError on portlet management screen for special use cases
  such as collective.portletpage, where not all content have the same 
  managers.
  [optilude]

- Template cleanup: add missing xmlns declarations and fix invalid markup.
  [wichert]


1.2rc3 - April 8, 2009
----------------------

- Correct import error in editmanager.py.
  [optilude]
